--- a/Rosyrain_blog/static/css_js/main.css
+++ b/Rosyrain_blog/static/css_js/main.css
@@ -1,4 +1,4 @@
-﻿/* normalize.css v3.0.2 | MIT License | git.io/normalize */
+﻿﻿/* normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
