--- a/Rosyrain_blog/templates/archive.html
+++ b/Rosyrain_blog/templates/archive.html
@@ -1,64 +1,83 @@
 {% extends 'base.html' %}
 
-{% block title %}归档{% endblock title %}
+{% block title %}
+    归档
+{% endblock %}
+
 
 {% block content %}
     <div class="content-wrap">
         <div id="content" class="content">
             <section id="posts" class="posts-collapse">
                 <span class="archive-move-on"></span>
-                <span class="archive-page-counter">非常好! 目前共计 15 篇日志。 继续努力。</span>
+                <span class="archive-page-counter">非常好! 目前共计 {{ blog_nums }} 篇日志。 继续努力。</span>
+
+                {% regroup all_blog.object_list by create_time.year as dates_by_year %}
+
+                {% for year in dates_by_year %}
+                    <div class="collection-title">
+                        <h2 class="archive-year motion-element" id="archive-year-2017"
+                            style="opacity: 1; display: block; transform: translateX(0px);">{{ year.grouper }}</h2>
+                    </div>
+                    {% for blog in year.list %}
+
+                        <article class="post post-type-normal" itemscope="" itemtype="http://schema.org/Article"
+                                 style="opacity: 1; display: block; transform: translateY(0px);">
+                            <header class="post-header">
+
+                                <h1 class="post-title">
+                                    <a class="post-title-link" href="{% url 'blog:blog_id' blog.id %}" itemprop="url">
+                                        <span itemprop="name">{{ blog.title }}</span>
+                                    </a>
+                                </h1>
+
+                                <div class="post-meta">
+                                    <time class="post-time" itemprop="dateCreated" datetime="2017-09-01T20:05:18+08:00"
+                                          content="2017-09-01">
+                                        {{ blog.create_time|date:"m-d" }}
+                                    </time>
+                                </div>
+
+                            </header>
+                        </article>
+
+                    {% endfor %}
+                {% endfor %}
 
 
-                <div class="collection-title">
-                    <h2 class="archive-year motion-element" id="archive-year-2017"
-                        style="opacity: 1; display: block; transform: translateX(0px);">2018</h2>
-                </div>
-
-                {% for blog in all_blog.object_list %}
-                <article class="post post-type-normal" itemscope="" itemtype="http://schema.org/Article"
-                         style="opacity: 1; display: block; transform: translateY(0px);">
-                    <header class="post-header">
-
-                        <h1 class="post-title">
-                            <a class="post-title-link" href="{% url 'blog:blog_id' blog.id %} " itemprop="url">
-                                <span itemprop="name">{{ blog.title }}</span>
-                            </a>
-                        </h1>
-
-                        <div class="post-meta">
-                            <time class="post-time" itemprop="dateCreated" datetime="2017-09-01T20:05:18+08:00"
-                                  content="2017-09-01">
-                                03-22
-                            </time>
-                        </div>
-
-                    </header>
-                </article>
-            {% endfor %}
             </section>
+
 
             <!--分页展示-->
             <nav class="pagination">
                 <div class="pageturn">
                     <ul class="pagelist">
-                        {% regroup all_blog.object_list by create_time.year as dates_by_year %}
 
-                        {% for year in dates_by_year %}
-                            {{ year.grouper }}
+                        {% if all_blog.has_previous %}
+                            <li class="long"><a href="?{{ all_blog.previous_page_number.querystring }}">上一页</a></li>
+                        {% endif %}
 
-                            {% regroup year.list by create_time.month as dates_by_month %}
-                            {% for month in dates_by_month %}
-                                {{ month.grouper }}
-                                {% for blog in month.list %}
-                                    {{ blog.title }}
-                                {% endfor %}
-                            {% endfor %}
+                        {% for page in all_blog.pages %}
+                            {% if page %}
+                                {% if page == all_blog.number %}
+                                    <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                                {% else %}
+                                    <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                                {% endif %}
+                            {% else %}
+                                <li class="none"><a href="">...</a></li>
+                            {% endif %}
                         {% endfor %}
+                        {% if all_blog.has_next %}
+                            <li class="long"><a href="?{{ all_blog.next_page_number.querystring }}">下一页</a></li>
+                        {% endif %}
+
                     </ul>
                 </div>
             </nav>
-        </div>
-    </div>
-{% endblock content %}
 
+
+        </div>
+
+    </div>
+{% endblock content%}
