--- a/Rosyrain_blog/templates/base.html
+++ b/Rosyrain_blog/templates/base.html
@@ -108,7 +108,7 @@
 
             <nav class="site-nav">
                 <ul id="menu" class="menu">
-                    <li class="menu-item menu-item-home menu-item-active"
+                    <li class="menu-item menu-item-home {% if page == 'home' %}menu-item-active{% endif %}"
                         style="opacity: 1; transform: translateY(0px);">
                         <a href="{% url 'blog:index' %}" rel="section">
                             <i class="menu-item-icon fa fa-fw fa-home"></i> <br>
@@ -116,30 +116,43 @@
                         </a>
                     </li>
 
-                    <li class="menu-item menu-item-archives" style="opacity: 1; transform: translateY(0px);">
+                    <li class="menu-item menu-item-archives {% if page == 'archive' %}menu-item-active{% endif %}"
+                        style="opacity: 1; transform: translateY(0px);">
                         <a href="{% url 'blog:archive' %}" rel="section">
                             <i class="menu-item-icon fa fa-fw fa-archive"></i> <br>
                             归档
                         </a>
                     </li>
 
-                    <li class="menu-item menu-item-archives" style="opacity: 1; transform: translateY(0px);">
+                    <li class="menu-item menu-item-archives {% if page == 'tags' %}menu-item-active{% endif %}"
+                        style="opacity: 1; transform: translateY(0px);">
                         <a href="{% url 'blog:tags' %}" rel="section">
                             <i class="menu-item-icon fa fa-fw fa-tags"></i> <br>
                             标签
                         </a>
                     </li>
-
-                    <li class="menu-item menu-item-archives" style="opacity: 1; transform: translateY(0px);">
-
-                        <a href="http://www.Rosyrain.cn/#search" id="search" rel="section">
-                            <i class="menu-item-icon fa fa-search"></i>
+                    <li class="menu-item menu-item-archives "
+                        style="opacity: 1; transform: translateY(0px);">
+                        <a href="{% url 'blog:tags' %}" rel="section">
+                            <i class="menu-item-icon fa fa-search"></i> <br>
+                            访问量:{{ visit_nums }}
                         </a>
-
-                        <form action="#">
-                            <input id="unit" type="search" name="q" placeholder="搜索">
-                        </form>
                     </li>
+
+                    {#                    <li class="menu-item menu-item-archives"#}
+                    {#                        style="opacity: 1; transform: translateY(0px);">#}
+                    {##}
+                    {#                        <a href="#" id="search" rel="section">#}
+                    {#                            <i class="menu-item-icon fa fa-search">#}
+                    {#                            </i>#}
+                    {#                            <br>#}
+                    {#                            访问量:{{ visit_nums }}#}
+                    {##}
+                    {#                        </a>#}
+                    {#                        <form action="#">#}
+                    {#                            <input id="unit" type="search" name="q" placeholder="搜索">#}
+                    {#                        </form>#}
+                    {#                    </li>#}
                 </ul>
             </nav>
 
@@ -216,7 +229,8 @@
                                 </span>
 
                             <span class="links-of-author-item">
-                                    <a href="https://blog.csdn.net/meng7000?spm=1018.2226.3001.5343" target="_blank" title="知乎">
+                                    <a href="https://blog.csdn.net/meng7000?spm=1018.2226.3001.5343" target="_blank"
+                                       title="知乎">
                                         <i class="fa fa-fw fa-globe"></i>
                                         博客
                                     </a>
@@ -235,7 +249,11 @@
                                     <a href="https://www.sunrt233.top/" title="孙如泰的博客"
                                        target="_blank">sunrt233博客</a>
                                 </li>
+                                <li class="links-of-blogroll-item">
 
+                                    <a href="http://www.shuxiaoyan.xyz/" title="殳小衍的博客"
+                                       target="_blank">殳小衍的博客</a>
+                                </li>
                             </ul>
                         </div>
 
