处理RSS订阅无法使用问题

--- a/Rosyrain_blog/templates/base.html
+++ b/Rosyrain_blog/templates/base.html
@@ -206,7 +206,7 @@
                         </nav>
 
                         <div class="feed-link motion-element">
-                            <a href="#" rel="alternate">
+                            <a href="{% url 'blog:rss' %}" rel="alternate">
                                 <i class="fa fa-rss"></i>
                                 RSS
                             </a>
